<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GP Customizing Icons</string>
    <string name="txt_title">Convert Patient Weight</string>
    <string name="hint">Weight of Patient</string>
    <string name="rad_lb_to_kilo">Convert Pounds to Kilograms</string>
    <string name="rad_kilo_to_lb">Convert Kilograms to Pounds</string>
    <string name="btn_convert">Convert Weight</string>
</resources>
